--- a/index.html
+++ b/index.html
@@ -152,14 +152,16 @@
     </nav>
 
     <div class="container">
-      <div class="row justify-content-center mt-5">
+     <!-- Search bar -->
+     <section class="mt-5">
+      <div class="row justify-content-center">
         <div class="col-md-6">
           <div class="input-group mb-3 shadow">
             <input
               type="text"
               class="form-control"
-              placeholder="Search task"
-              aria-label="Search task"
+              placeholder="Search Task"
+              aria-label="Search Task"
               aria-describedby="basic-addon2"
             />
             <span class="input-group-text" id="basic-addon2"
@@ -168,44 +170,12 @@
           </div>
         </div>
       </div>
+    </section>
 
-      <!-- Cards -->
-      <section>
-        <div class="row task__container">
-          <div class="col-md-6 col-lg-4">
-            <div class="card">
-              <div class="card-header d-flex justify-content-end gap-2">
-                <button type="button" class="btn btn-outline-success">
-                  <i class="fas fa-pencil-alt"></i>
-                </button>
-                <button type="button" class="btn btn-outline-danger">
-                  <i class="fas fa-trash-alt"></i>
-                </button>
-              </div>
-              <img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyrkepnNwLhK2kxt6KAfahr54IXeuK0_7GVOyY0dyeUlNudsGd1igSX_LfNfJyCsT-giA&usqp=CAU"
-                class="card-img-top"
-                alt="..."
-              />
-
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">
-                  With supporting text below as a natural lead-in to additional
-                  content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-              <div class="card-footer">
-                <button type="button" class="btn btn-outline-primary float-end">
-                  Open Task
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
+    <section>
+      <div class="row task__container"></div>
+    </section>
+  </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script
